update and delete comment done
