# data/request/comments.go
@@ -4,3 +4,7 @@ type CommentRequest struct {
 	Message	string	`json:"message" validate:"required"`
 	PhotoId	uint	`json:"photo_id" validate:"required"`
 }
+
+type CommentUpdateReq struct {
+	Message	string	`json:"message" validate:"required"`
+}
